--- a/Resources/config/controller.yml
+++ b/Resources/config/controller.yml
@@ -11,7 +11,7 @@ services:
             - @xidea_person.person.loader
         calls:
             - [setEventDispatcher, [@event_dispatcher]]
-            - [setTemplating, [@templating]]
+            - [setTemplateManager, [@xidea_base.template_manager]]
     xidea_person.controller.show:
         class: %xidea_person.controller.show.class%
         arguments:
@@ -19,15 +19,15 @@ services:
             - @xidea_person.person.loader
         calls:
             - [setEventDispatcher, [@event_dispatcher]]
-            - [setTemplating, [@templating]]
+            - [setTemplateManager, [@xidea_base.template_manager]]
     xidea_person.controller.create:
         class: %xidea_person.controller.create.class%
         arguments:
             - @xidea_person.person.configuration
             - @xidea_person.person.factory
             - @xidea_person.person.manager
-            - @xidea_person.person.form.create.handler
+            - @xidea_person.person.form.handler
         calls:
             - [setEventDispatcher, [@event_dispatcher]]
             - [setRouter, [@router]]
-            - [setTemplating, [@templating]]
+            - [setTemplateManager, [@xidea_base.template_manager]]
