Updated with a new component structure

--- a/Resources/config/validation.yml
+++ b/Resources/config/validation.yml
@@ -1,4 +1,4 @@
-Xidea\Component\Person\Model\AbstractPerson:
+Xidea\Person\Model\AbstractPerson:
     properties:
         name:
             - NotBlank: {}
