--- a/Resources/config/person.yml
+++ b/Resources/config/person.yml
@@ -1,6 +1,6 @@
 parameters:
     xidea_person.person.configuration.default.class: Xidea\Bundle\BaseBundle\Configuration
-    xidea_person.person.factory.default.class: Xidea\Component\Base\Factory\ModelFactory
+    xidea_person.person.factory.default.class: Xidea\Base\Model\Factory\DefaultFactory
   
 services:
     xidea_person.person.configuration.default:
