--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "symfony/symfony": "2.7.*",
-        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
-        "doctrine/dbal": "<2.5",
-        "doctrine/doctrine-bundle": "~1.4",
+        "php": ">=5.5.9",
+        "symfony/symfony": "3.0.*",
+        "twig/twig": "~1.23|~2.0",
+        "doctrine/doctrine-bundle": "~1.5",
+        "doctrine/orm": "~2.4",
         "symfony/assetic-bundle": "~2.3",
-        "twig/twig": "~1.12",
         "xideapl/person": "dev-master@dev",
         "xideapl/base-bundle": "dev-master@dev"
     },
@@ -35,7 +34,7 @@
         "xideapl/user-bundle": "dev-master@dev"
     },
     "autoload": {
-        "psr-0": { "Xidea\\Bundle\\PersonBundle": "" }
+        "psr-4": { "Xidea\\Bundle\\PersonBundle\\": "" }
     },
     "target-dir": "Xidea/Bundle/PersonBundle",
 	"extra": {
